--- a/app/src/main/res/layout/activity_flyco.xml
+++ b/app/src/main/res/layout/activity_flyco.xml
@@ -25,7 +25,7 @@
         tl:tl_underline_height="1dp"/>
 
 
-    <cn.csfz.eajon.test.widget.NoScrollViewPager
+    <cn.csfz.eajon.tools.widget.NoScrollViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
